<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 StagOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    
    <!-- General app strings -->
    <string name="horns_title">Horns</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="choose_app">Choose app</string>
    <string name="general_category">General</string>
    <string name="gestures_category">Gestures</string>
    <string name="security_category">Security</string>
    <string name="hardware_category">Hardware</string>
    <string name="list_preference_default_summary">%s</string>
    <string name="dlg_cancel">cancel</string>
    <string name="dlg_reset_values_message">Reset values to\nAndroid- or Horns default?</string>
    <string name="dlg_reset_android">Android</string>
    <string name="dlg_reset_horns">Horns</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>

    <!-- SystemUI Restart -->
    <string name="systemui_restart_toast">This feature requires a SystemUI restart to be applied. We\'ll restart the SystemUI right now.</string>

    <!-- Horns categories -->
    <string name="recents_category">Recents</string>
    <string name="recents_title">Recents</string>
    <string name="statusbar_category">Statusbar</string>
    <string name="statusbar_title">Statusbar</string>
    <string name="system_category">System</string>
    <string name="system_title">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="lockscreen_title">Lockscreen</string>
    <string name="lockscreen_style">Lockscreen Style</string>
    <string name="navigation_category">Navigation</string>
    <string name="quicksettings_title">Quick Settings</string>
    <string name="misc_settings_title">Misc</string>
    <string name="button_settings">Buttons</string>
    <string name="navbar_category">Navigation bar</string>
    <string name="misc_settings_summary">Miscellaneous options for customization</string>
    <string name="battery_light_settings">Battery charging light</string>
    <string name="battery_light_settings_summary">Enable and configure how the LED should work</string>
    <string name="battery_style_title">Battery style</string>
    <string name="battery_style_summary">Change the look of the icon in the statusbar</string>
    <string name="button_settings_title">Buttons</string>
    <string name="button_settings_title_summary">Perform custom button actions</string>
    <string name="carrier_label_title">Carrier label</string>
    <string name="carrier_label_summary">Customize your statusbar carrier label</string>
    <string name="lockscreen_clock_selection_title">Clock style</string>
    <string name="lockscreen_clock_selection_summary">Change lockscreen clock style</string>
    <string name="lockscreen_misc_selection_title">Security settings</string>
    <string name="lockscreen_misc_selection_summary">Screen unlock settings</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="network_traffic_summary">Show me network traffic status</string>
    <string name="show_clear_all_recents_button_title">Clear all button</string>
    <string name="show_clear_all_recents_button_summary">Show clear all button</string>
    <string name="recents_type_title">Recents Layout</string>
    <string name="recents_type_summary">Change recents layout for Stock, Grid, Android Go</string>
    <string name="status_bar_clock_date_settings_title">Clock &amp; date</string>
    <string name="status_bar_clock_date_settings_summary">Choose how to display the clock &amp; date in the status bar</string>
    <string name="quicksettings_summary">Change more quick settings</string>
    <string name="ticker_mode_title">Statusbar notification ticker</string>
    <string name="ticker_mode_title_summary">Quickly show song title and notification in status bar</string>


    <!-- about categorie -->
    <string name="about_category">About</string>
    <string name="about_title">About</string>
    <string name="about_category_summary">A little (Coz who\'d read this anyway) info abt our team :P</string>
    <string name="about_stag">StagOS</string>
    <string name="about_stag_description">Stag??? \nWe are the StagOS(P.S. Team), we aim at elegance, Material Design being at our core. \nTo start up Pure AOSP was the best option cause what\'s more better than android straight from google. \nNext we need those teensy weensy bits of customisations, \nLike the clock could be to the right instead \nWhat\'s the download speed... and such. So why leave those feelings empty. \nWith Stag we aim at giving a pure andriod experience fulfilling those small itches in the mind. \nDon\'t forget, You need to grow your own Horns, Just kidding enjoy. \nSic Parvis Magna</string>
    <string name="phenom_name">Phenomenal1</string>
    <string name="phenom_description">Founder | Lead Developer | Maintainer</string>
    <string name="vjs_name">VJS Pranavasri</string>
    <string name="vjs_description">Founder | Lead Developer | Maintainer</string>
    <string name="pritish_name">Pritish Joshi</string>
    <string name="pritish_description">Designer | UX | Tester</string>
    <string name="rakesh_name">Rakesh Rakhi Samuel</string>
    <string name="rakesh_description">Website Creator/Maintainer | Contributor</string>
    <string name="abhimanyu_name">Abhimanyu Shekhawat</string>
    <string name="abhimanyu_description">Team Member | Contributor</string>
    <string name="vinoth_name">Vinoth Raja</string>
    <string name="vinoth_description">Team Member | Contributor</string>

    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>

    <!-- Quick Settings brightness slider -->
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>

    <!-- Quick Settings brightness icon -->
    <string name="brightness_icon_title">Brightness icon </string>
    <string name="brightness_icon_summary">Show a brightness icon to the left of the brighness slider to adjust auto-brightness</string>

    <!-- Round Corner Radius -->
    <string name="corners_category">Corners</string>
    <string name="corner_radius">Rounded Corner Radius</string>
    <string name="content_padding">Corner Content Padding</string>
    <string name="corner_fwvals">Use framework values</string>
    <string name="corner_fwvals_summary">Useful if the device actually has rounded corners</string>

</resources>
