<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 StagOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.stag.horns.about.DiagonalView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:id="@+id/background"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/background"
        android:layout_marginStart="30dp"
        android:textSize="20dp"
        android:textColor="@*android:color/about_text_color_primary"
        android:text="@string/about_stag" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name"
        android:layout_below="@+id/name"
        android:layout_marginTop="6dp"
        android:textColor="@*android:color/about_text_color_secondary"
        android:layout_marginRight="16dp"
        android:text="@string/about_stag_description" />

    <ImageView
        android:id="@+id/twitter"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_alignStart="@+id/description"
        android:layout_below="@+id/description"
        android:layout_marginTop="12dp"
        android:src="@drawable/twitter" />

    <ImageView
        android:id="@+id/google"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_alignBottom="@+id/twitter"
        android:layout_marginStart="14dp"
        android:visibility="gone"
        android:layout_toEndOf="@+id/twitter"
        android:src="@drawable/google" />

    <ImageView
        android:id="@+id/telegram"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_alignBottom="@+id/twitter"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/google"
        android:visibility="gone"
        android:src="@drawable/telegram" />

    <ImageView
        android:id="@+id/github"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_alignBottom="@+id/twitter"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/telegram"
        android:visibility="gone"
        android:src="@drawable/github" />

    <!-- Phenomenal1 -->
    <android.support.v7.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/twitter"
        android:layout_marginTop="16dp"
        android:padding="4dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearLayout">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/phenom"
                    android:src="@drawable/phenom"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/phenomname"
                        android:text="@string/phenom_name"
                        android:textStyle="bold"
                        android:textSize="22dp"
                        android:textColor="@*android:color/about_text_color_primary"
                        android:layout_marginLeft="16dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/phenomdescription"
                        android:textColor="@*android:color/about_text_color_secondary"
                        android:textSize="14dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/phenom_description"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!-- Vjs Pranav -->
    <android.support.v7.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/card1"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearLayout">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/vjs"
                    android:src="@drawable/vjs"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/vjsname"
                        android:text="@string/vjs_name"
                        android:textStyle="bold"
                        android:textSize="22dp"
                        android:textColor="@*android:color/about_text_color_primary"
                        android:layout_marginLeft="16dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/vjsdescription"
                        android:textColor="@*android:color/about_text_color_secondary"
                        android:textSize="14dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/vjs_description"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!-- Pritish Joshi -->
    <android.support.v7.widget.CardView
        android:id="@+id/card3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/card2"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearLayout">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/pritish"
                    android:src="@drawable/pritish"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pritishname"
                        android:text="@string/pritish_name"
                        android:textStyle="bold"
                        android:textSize="22dp"
                        android:textColor="@*android:color/about_text_color_primary"
                        android:layout_marginLeft="16dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pritishdescription"
                        android:textColor="@*android:color/about_text_color_secondary"
                        android:textSize="14dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/pritish_description"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!-- Rakesh Rakhi Samuel -->
    <android.support.v7.widget.CardView
        android:id="@+id/card4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/card3"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearLayout">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/rakesh"
                    android:src="@drawable/rakesh"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rakeshname"
                        android:text="@string/rakesh_name"
                        android:textStyle="bold"
                        android:textSize="22dp"
                        android:textColor="@*android:color/about_text_color_primary"
                        android:layout_marginLeft="16dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rakeshdescription"
                        android:textColor="@*android:color/about_text_color_secondary"
                        android:textSize="14dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/rakesh_description"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!-- Abhimanyu Shekhawat -->
    <android.support.v7.widget.CardView
        android:id="@+id/card5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/card4"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearLayout">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/abhimanyu"
                    android:src="@drawable/abhimanyu"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/abhimanyuname"
                        android:text="@string/abhimanyu_name"
                        android:textStyle="bold"
                        android:textSize="22dp"
                        android:textColor="@*android:color/about_text_color_primary"
                        android:layout_marginLeft="16dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/abhimanyudescription"
                        android:textColor="@*android:color/about_text_color_secondary"
                        android:textSize="14dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/abhimanyu_description"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!-- Vinoth Raja -->
    <android.support.v7.widget.CardView
        android:id="@+id/card6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/card5"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearLayout">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/vinoth"
                    android:src="@drawable/vinoth"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/vinothname"
                        android:text="@string/vinoth_name"
                        android:textStyle="bold"
                        android:textSize="22dp"
                        android:textColor="@*android:color/about_text_color_primary"
                        android:layout_marginLeft="16dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/vinothdescription"
                        android:textColor="@*android:color/about_text_color_secondary"
                        android:textSize="14dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/vinoth_description"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
